--- a/web/themes/custom/tigris/assets/scss/component/_paragraph.scss
+++ b/web/themes/custom/tigris/assets/scss/component/_paragraph.scss
@@ -1,3 +1,3 @@
-section.bg-color {
-  padding: 15px;
+.paragraph--type--bp-columns {
+
 }
