--- a/web/themes/custom/tigris/assets/scss/layout/_page.scss
+++ b/web/themes/custom/tigris/assets/scss/layout/_page.scss
@@ -29,9 +29,6 @@ body:not(.path-taxonomy) {
     }
   }
 }
-section {
-  padding: 15px;
-}
 .section:not(#section-tigris-local-actions) {
   padding: 25px;
 }
